Use DTO's for POST/PUT request bodies.
