# webapp/config/packages/nelmio_api_doc.yaml
@@ -124,107 +124,5 @@ nelmio_api_doc:
                         text/html:
                             schema:
                                 type: string
-            schemas:
-                AddUser:
-                    required:
-                        - username
-                        - name
-                        - password
-                        - roles
-                    type: object
-                    properties:
-                        username:
-                            type: string
-                        name:
-                            type: string
-                        email:
-                            type: string
-                            format: email
-                        ip:
-                            type: string
-                        password:
-                            type: string
-                            format: password
-                        enabled:
-                            type: boolean
-                            nullable: true
-                        team_id:
-                            type: string
-                        roles:
-                            type: array
-                            items:
-                                type: string
-                ClarificationPost:
-                    type: object
-                    required: [text]
-                    properties:
-                        text:
-                            type: string
-                            description: The body of the clarification to send
-                        problem_id:
-                            type: string
-                            description: The problem the clarification is for
-                            nullable: true
-                        reply_to_id:
-                            type: string
-                            description: The ID of the clarification this clarification is a reply to
-                            nullable: true
-                        from_team_id:
-                            type: string
-                            description: The team the clarification came from. Only used when adding a clarification as admin
-                            nullable: true
-                        to_team_id:
-                            type: string
-                            description: The team the clarification must be sent to. Only used when adding a clarification as admin
-                            nullable: true
-                        time:
-                            type: string
-                            format: date-time
-                            description: The time to use for the clarification. Only used when adding a clarification as admin
-                        id:
-                            type: string
-                            description: The ID to use for the clarification. Only used when adding a clarification as admin and only allowed with PUT
-                ContestProblemPut:
-                    type: object
-                    required: [label]
-                    properties:
-                        label:
-                            type: string
-                            description: The label of the problem to add to the contest
-                        color:
-                            type: string
-                            description: Human readable color of the problem to add. Will be overwritten by `rgb` if supplied
-                        rgb:
-                            type: string
-                            description: Hexadecimal RGB value of the color of the problem to add. Will be used if both `color` and `rgb` are supplied
-                        points:
-                            type: integer
-                            description: The number of points for the problem to add. Defaults to 1
-                        lazy_eval_results:
-                            type: boolean
-                            description: Whether to use lazy evaluation for this problem. Defaults to the global setting
-                TeamCategoryPost:
-                    type: object
-                    required: [name]
-                    properties:
-                        hidden:
-                            type: boolean
-                            description: Show this group on the scoreboard?
-                            nullable: true
-                        icpc_id:
-                            type: string
-                            description: The ID in the ICPC CMS for this group
-                            nullable: true
-                        name:
-                            type: string
-                            description: How to name this group on the scoreboard
-                        sortorder:
-                            type: integer
-                            minimum: 0
-                            description: Bundle groups with the same sortorder, create different scoreboards per sortorder
-                        color:
-                            type: string
-                            nullable: true
-                            description: Color to use for teams in this group on the scoreboard
     areas:
         path_patterns: [ ^/api/v4 ]
